<resources>
    <string name="app_name">TipCalculator</string>
    <string name="text_editor_hint">Coast of service</string>
    <string name="ok">Ok (15%)</string>
    <string name="good">Good (18%)</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_btn">Calculate</string>
    <string name="tip_amount">Tip Amount : %s</string>
</resources>